--- a/vanilla-weather-app/src/style.css
+++ b/vanilla-weather-app/src/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  color: #878787;
+  color: #61676b;
   font-size: 24px;
   font-weight: 100;
   line-height: 28.8px;
@@ -20,7 +20,7 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-  color: rgb(135, 135, 135);
+  color: rgb(97, 103, 107);
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
@@ -32,14 +32,15 @@ li {
 
 .weather-app {
   padding: 20px;
-  border: 1px solid #c5eeff;
+  border: 1px solid #90b5cc;
   border-radius: 5px;
 }
 .overview {
   margin-bottom: 20px;
 }
 .weather-temperature img {
-  margin-right: 20px;
+  margin-right: 5px;
+  margin-top: 7px;
 }
 .weather-temperature strong {
   font-size: 54px;
