--- a/src/style.css
+++ b/src/style.css
@@ -54,3 +54,8 @@ li:first-letter {
   font-size: 16px;
   top: -26px;
 }
+.weather-temperature .active {
+  color: black;
+  cursor: default;
+  text-decoration: none;
+}
