--- a/src/style.css
+++ b/src/style.css
@@ -59,3 +59,23 @@ li:first-letter {
   cursor: default;
   text-decoration: none;
 }
+.weather-forecast h4 {
+  color: rgb(97, 103, 107);
+  font-size: 14px;
+  text-align: center;
+}
+.weather-forecast img {
+  display: block;
+  margin: 0 auto;
+  height: 48px;
+  width: 48px;
+}
+.weather-forecast-temperature {
+  text-align: center;
+  color: rgb(97, 103, 107);
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 15px;
+  margin-top: 5px;
+  word-spacing: 2px;
+}
